<resources>
    <string name="app_name">shopping-app</string>

    <string name="facebook_app_id">165290168230815</string>
    <string name="fb_login_protocol_scheme">fb165290168230815</string>

    <!-- Common -->
    <string name="common_error_retry">Retry</string>

    <!-- Auth Screen -->
    <string name="auth_sign_in_title">Login</string>
    <string name="auth_input_email_hint">Email</string>
    <string name="auth_input_password_hint">Password</string>
    <string name="auth_label_remember_me">Remember Me</string>
    <string name="auth_button_sign_in">Sign In</string>
    <string name="auth_button_facebook_sign_in">Facebook Sign In</string>

    <!-- Main Navigation Menu -->
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_feed">Feed</string>
    <string name="nav_menu_cart">Cart</string>
    <string name="nav_menu_profile">Profile</string>

    <!-- Home Screen -->
    <string name="home_action_menu_search">Search</string>
    <string name="home_image_category_description">Category</string>
    <string name="home_image_item_description">Item</string>
    <string name="home_image_favorite_description">Favorite</string>
    <string name="home_empty_message">No Items</string>

    <!-- Item Detail Screen -->
    <string name="item_detail_button_purchase_text">Buy</string>
    <string name="item_detail_action_menu_share">Share</string>

    <!-- Profile Screen -->
    <string name="profile_action_menu_sign_out">Sign Out</string>
    <string name="profile_empty_purchase_message">No Purchased Items</string>

    <!-- Search Screen -->
    <string name="search_empty_message">No Items</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
