<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_space">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/auth_card_corner_radius"
        app:cardElevation="@dimen/auth_card_elevation"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_space">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auth_sign_in_title"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_space"
                app:layout_constraintTop_toBottomOf="@id/text_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/auth_input_email_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="@dimen/auth_input_edit_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_space"
                app:layout_constraintTop_toBottomOf="@id/input_layout_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/auth_input_password_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="@dimen/auth_input_edit_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_space"
                android:text="@string/auth_label_remember_me"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/default_button_height"
                android:layout_marginTop="@dimen/default_space"
                android:text="@string/auth_button_sign_in"
                android:textSize="@dimen/auth_button_sign_in_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_facebook_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_space"
                android:text="@string/auth_button_facebook_sign_in"
                android:textSize="@dimen/auth_button_sign_in_text_size"
                app:layout_constraintTop_toBottomOf="@id/button_sign_in" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/button_google_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_space"
                app:layout_constraintTop_toBottomOf="@id/button_facebook_sign_in" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>